# lab04_parsing_template

./: CMakeLists.txt  README.md
resources/scenefiles/: ambient_test.json  chess.json  ray_killer.json  recursive_spheres_4.json  recursive_spheres_4.xml  test_full_scenenode.json  test_full_scenenode.xml
src/: main.cpp
src/parser/: scenedata.h  scenefilereader.cpp  scenefilereader.h  sceneparser.cpp  sceneparser.h
src/ui/: glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.ui
